--- a/videocorsi/theComplete2021webDevBootcamp/cssMySite/style.css
+++ b/videocorsi/theComplete2021webDevBootcamp/cssMySite/style.css
@@ -2,30 +2,45 @@
 
 body {
   margin: 0;
+  text-align: center;
 }
 
 h1 {
   margin-top: 0;
+  width: 10%;
+  margin: 0 auto 0 auto
 }
 
 /* CLASS SELECTORS */
 
 .top-div {
-  background-color: #DEEDF0 ;
-  width: 200px;
-  height: 200px;
+  background-color: #E4F9F5 ;
+  position: relative;
+  padding-top: 100px;
 }
 
-.medium-div {
+.middle-div {
   background-color: #F4C7AB ;
   width: 200px;
   height: 200px;
 }
 
-.foot-div {
+.bottom-div {
   background-color: #B2B8A3 ;
   width: 200px;
   height: 200px;
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
 
 /* ID SELECTORS */
