--- a/videocorsi/theComplete2021webDevBootcamp/cssMySite/style.css
+++ b/videocorsi/theComplete2021webDevBootcamp/cssMySite/style.css
@@ -6,9 +6,22 @@ body {
 }
 
 h1 {
-  margin-top: 0;
-  width: 10%;
-  margin: 0 auto 0 auto
+  font-size: 5.625rem;
+  margin-top: 50px;
+  color: #66bfbf;
+  line-height: 2;
+}
+
+h2 {
+  color: #66bfbf;
+}
+
+h3 {
+  color: #11999e;
+}
+
+a {
+  color: #11999e;
 }
 
 /* CLASS SELECTORS */
@@ -19,18 +32,13 @@ h1 {
   padding-top: 100px;
 }
 
-.middle-div {
-  background-color: #F4C7AB ;
-  width: 200px;
-  height: 200px;
+.middle-container {
+
 }
 
-.bottom-div {
-  background-color: #B2B8A3 ;
-  width: 200px;
-  height: 200px;
-}
+.bottom-container {
 
+}
 .top-cloud {
   position: absolute;
   right: 300px;
@@ -42,5 +50,4 @@ h1 {
   left: 300px;
   bottom: 300px;
 }
-
 /* ID SELECTORS */
